--- a/list.html
+++ b/list.html
@@ -61,17 +61,12 @@
     </nav>
 
     <!-- jumbotron -->
-    <div class="jumbotron">
-        <div class="container">
-            <p class="h1 text-primary">Frase del día</p>
-            <br />
-            <p>“La conmiseración con los animales está íntimamente unida con la bondad de carácter, de tal manera que se
-                puede afirmar de seguro, que quien es cruel con los animales no puede ser buena persona”.<br>
-                <strong>Arthur
-                    Schopenhauer.</strong></p>
-            <a href="frases.html"><button type="button" class="btn btn-primary">Frases ... >></button></a>
-        </div>
-    </div>
+    <div class="logo">
+            <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
+      
+          </div>
+          <hr />
+      
     <!-- fin jumbotron -->
     <div class="titulo">
         <blockquote class="blockquote text-center">
