--- a/testing.html
+++ b/testing.html
@@ -21,9 +21,9 @@
 
       <!-- Creamos un menu para navegacion por la pagina -->
 
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63"
-            width="80"></span></a>
+      <nav class="navbar navbar-expand-md bg-white navbar-white navbar">
+        <a class="navbar-brand" href="list.html"><img src="assets/Patitas-01.jpg" alt="Smiley face" height="163"
+            width="290"></span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
           </form>
-          <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
+          <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
             Register
           </button>
         </div>
