--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="Es">
 
 <head>
     <!-- Required meta tags -->
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>list.html</title>
 </head>
@@ -17,23 +16,17 @@
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Header -->
 
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63"
-                width="80"></span></a>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,13 +55,13 @@
 
     <!-- jumbotron -->
     <div class="logo">
-            <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
-      
-          </div>
-          <hr />
-      
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
+
+    </div>
+    <hr />
+
     <!-- fin jumbotron -->
-   
+
 
     <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
         <div class="row justify-content-start">
@@ -111,8 +104,7 @@
                         <input type="ojos" class="form-control" id="ojos">
                     </div>
 
-                    <a href="animal.html" class="btn btn-primary btn-md active" role="button"
-                        aria-pressed="true">Buscar</a>
+                    <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Buscar</a>
                     <button type="reset" class="btn btn-secondary">Cancelar</button>
                 </form>
             </div>
@@ -126,10 +118,7 @@
                             <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Max</h5>
-                                <p class="card-text">Some quicktitle and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <p class="card-text">Some quicktitle and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
@@ -139,11 +128,7 @@
                             <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Zeus</h5>
-                                <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the
-                                    card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
@@ -153,10 +138,7 @@
                             <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Clarita</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
@@ -167,8 +149,7 @@
                             <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Clarita</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
@@ -178,10 +159,7 @@
                             <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Clarita</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
@@ -191,10 +169,7 @@
                             <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Clarita</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
                         </div>
