--- a/testing.html
+++ b/testing.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="Es">
 
 <head>
-  <title>testing</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <title>testing</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
-  <!-- Creamos el header con la cabecera de la pagina, en este caso solo tenemos el titulo -->
-  <main>
-    <header>
+    <!-- Creamos el header con la cabecera de la pagina, en este caso solo tenemos el titulo -->
+
+    <header></header>
+    <!-- Creamos un menu para navegacion por la pagina -->
+    <nav class="menu">
+        <div class="conteiner-fluid">
+            <div class="row align-items-end">
+                <div class="col col-sm-4 align-self-end">
+                    <ul class="list-group list-group-horizontal-sm list-group-flush list-group-item-ligh">
+                        <li><a href="list.html" class="">Home</a></li>
+                        <li><a href="newAnimal.html" class="">Nuevo</a></li>
+                        <li><a href="blog.html" class="">Blog</a></li>
+                        <li><a href="whishlist.html" class="">Whishlist</a></li>
+                    </ul>
+                </div>
+                <div class="col col-sm-4">
+                    <div class="logo">
+                        <img src="assets/Patitas-02.png" class="img-responsive" alt="" title="">
+                    </div>
+                </div>
+                <div class="LogInn col col-sm-4 text-right">
+                    <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
+                    Register
+                  </button>
+                </div>
+            </div>
 
 
-      <!-- Creamos un menu para navegacion por la pagina -->
 
-      <nav class="navbar navbar-expand-md bg-white navbar-white navbar">
-        <a class="navbar-brand" href="list.html"><img src="assets/Patitas-01.jpg" alt="Smiley face" height="163"
-            width="290"></span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-          </form>
-          <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
-            Register
-          </button>
         </div>
-      </nav>
+    </nav>
+    <hr />
 
-    </header>
 
-    <div class="logo">
-      <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
 
-    </div>
+    <main></main>
 
 
 
@@ -63,26 +57,25 @@
 
     <!-- Añadimos una seccion -->
     <section>
-      <!-- Y dentro de esta seccion añadimos varios articulos -->
-      <article>
-
-      </article>
+        <!-- Y dentro de esta seccion añadimos varios articulos -->
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque saepe facere hic, repellendus cum velit nihil unde corrupti eum modi temporibus sapiente ex eius alias eligendi perferendis laborum. Accusantium quae tempore enim, obcaecati
+                quidem quibusdam fugiat voluptatem aut ad aliquid expedita praesentium magnam corrupti iste amet voluptatibus repudiandae facere consequuntur. Numquam delectus impedit corrupti odio aliquam. Cupiditate, eaque nobis labore recusandae, quaerat
+                fugiat, maiores minus illum voluptatem sit obcaecati veritatis quis dolorem praesentium harum eum. Nesciunt, ipsam. Totam, doloremque doloribus.</p>
+        </article>
     </section>
 
-  </main>
-  <!-- footer -->
-  <footer>
+
+    <!-- footer -->
+
     <hr />
     <blockquote class="blockquote"></blockquote>
     <footer class="blockquote-footer text-center">
-      <div class=footer>
-        <p>Posted by: Luis Besil</p>
-
+        <div class=footer>
+            <p>Posted by: Luis Besil</p>
     </footer>
-    </blockquote>
 
 
-  </footer>
 
 
 </body>
