--- a/newAnimal.html
+++ b/newAnimal.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>list.html</title>
 </head>
@@ -17,15 +16,9 @@
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
     <!-- NAVBAR -->
@@ -63,13 +56,10 @@
         <div class="container text-Left">
             <p class="h1 text-primary">
                 I am looking for friend!</p>
-            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                wplate for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. </p>
+            <p class="h6">
+                <blockquote> "is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational wplate for a simple marketing or informational"</blockquote>
+                website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing
+                or informational website. This is a template for a simple marketing or informational website. </p>
             <button type="button" class="btn btn-primary">Learn more >></button>
 
         </div>
@@ -216,8 +206,8 @@
                             </select>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="inputAddress2 col-md-4">Edad</label>                            
-                                    <input type="date" class="custom-select custom-select-md mb-3" name="bday">                           
+                            <label for="inputAddress2 col-md-4">Edad</label>
+                            <input type="date" class="custom-select custom-select-md mb-3" name="bday">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputAddress2 col-md-4">Color de ojos</label>
@@ -264,8 +254,7 @@
                     <div class="form-group">
                         <div class="mb-3">
                             <label for="validationTextarea">Descripción</label>
-                            <textarea class="form-control" id="validationTextarea"
-                                placeholder="Descripción ..."></textarea>
+                            <textarea class="form-control" id="validationTextarea" placeholder="Descripción ..."></textarea>
                             <div class="invalid-feedback">
                                 Please enter a message in the textarea.
                             </div>
