--- a/testing.html
+++ b/testing.html
@@ -34,7 +34,7 @@
                         <img src="assets/Patitas-02.png" class="img-responsive" alt="" title="">
                     </div>
                 </div>
-                <div class="LogInn col col-sm-4 text-right">
+                <div class="LogInn col col-sm-4">
                     <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
                     Register
                   </button>
@@ -57,12 +57,127 @@
 
     <!-- Añadimos una seccion -->
     <section>
-        <!-- Y dentro de esta seccion añadimos varios articulos -->
-        <article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque saepe facere hic, repellendus cum velit nihil unde corrupti eum modi temporibus sapiente ex eius alias eligendi perferendis laborum. Accusantium quae tempore enim, obcaecati
-                quidem quibusdam fugiat voluptatem aut ad aliquid expedita praesentium magnam corrupti iste amet voluptatibus repudiandae facere consequuntur. Numquam delectus impedit corrupti odio aliquam. Cupiditate, eaque nobis labore recusandae, quaerat
-                fugiat, maiores minus illum voluptatem sit obcaecati veritatis quis dolorem praesentium harum eum. Nesciunt, ipsam. Totam, doloremque doloribus.</p>
-        </article>
+        <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="row justify-content-start">
+                <div class="serchVerticalL col col-sm-2 borderless">
+
+                    <form class="form" action="">
+                        Filtros
+                        <hr />
+                        <div class="form-group">
+                            <label for="tipo">Tipo</label>
+                            <input type="tipo" class="form-control" id="tipo">
+                        </div>
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="nombre" class="form-control" id="nombre">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="barrio">Barrio</label>
+                            <input type="barrio" class="form-control" id="barrio">
+                        </div>
+                        <div class="form-group">
+                            <label for="raza">Raza</label>
+                            <input type="raza" class="form-control" id="raza">
+                        </div>
+                        <div class="form-group">
+                            <label for="sexo">Sexo</label>
+                            <input type="sexo" class="form-control" id="sexo">
+                        </div>
+                        <div class="form-group">
+                            <label for="edad">Edad</label>
+                            <input type="edad" class="form-control" id="edad">
+                        </div>
+                        <div class="form-group">
+                            <label for="pelo">Color de pelo</label>
+                            <input type="pelo" class="form-control" id="pelo">
+                        </div>
+                        <div class="form-group">
+                            <label for="ojos">Color de ojos</label>
+                            <input type="ojos" class="form-control" id="ojos">
+                        </div>
+
+                        <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Buscar</a>
+                        <button type="reset" class="btn btn-secondary">Cancelar</button>
+                    </form>
+                </div>
+
+
+
+                <div class="col col-sm-center">
+                    <div class="row">
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Max</h5>
+                                    <p class="card-text">Some quicktitle and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Zeus</h5>
+                                    <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clarita</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clarita</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clarita</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clarita</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="serchVerticalR col col-sm-2">
+                    <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
+                    <hr />
+                    <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
+                    <hr />
+                </div>
+            </div>
+        </div>
     </section>
 
 
@@ -74,15 +189,25 @@
         <div class=footer>
             <p>Posted by: Luis Besil</p>
     </footer>
-
-
-
-
 </body>
 
 
 <style>
-
+    .logo {
+        text-align: center;
+        padding-top: 5px;
+        background-color: white;
+        margin: 0 auto;
+    }
+    
+    .logo img {
+        width: 250px;
+        margin: 0 auto;
+    }
+    
+    .LogInn {
+        text-align: right;
+    }
 </style>
 
 </html>
